[package]
name = "rspotd-cli"
version = "0.2.1"
edition = "2021"
description = "Generate ARRIS/Commscope password-of-the-day for modems using rspotd library"
homepage = "https://github.com/SnailShea/rspotd-cli"
license = "MIT OR Apache-2.0"
keywords = ["arris", "commscope", "modem", "docsis", "potd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "string"] }
rspotd = "0.4.0"
serde_json = "1.0.116"

[profile.release]
strip = "debuginfo"
